--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #000000; /* 黑色背景 */
+      color: #ffffff; /* 白色文字 */
     }
     .container {
       max-width: 800px;
       margin: 20px auto;
       padding: 10px;
       border: 1px solid #ddd;
+      background-color: #1a1a1a; /* 稍微淺一些的黑色背景 */
     }
     .row {
       display: flex;
@@ -33,6 +36,7 @@
     .time {
       width: 150px;
       text-align: center;
+      color: #ffffff; /* 白色時間文字 */
     }
     .checkbox {
       margin-left: 10px;
@@ -40,23 +44,27 @@
     .location {
       font-size: 1.2em;
       margin-bottom: 20px;
+      color: #ffffff; /* 白色地點文字 */
     }
     footer {
       text-align: center;
       margin-top: 20px;
       font-size: 14px;
-      color: #555;
+      color: #ffffff; /* 白色字體 */
     }
     .summary {
       margin-top: 20px;
+      color: #ffffff; /* 白色字體 */
     }
     .current-round {
       font-size: 1.2em;
       margin-bottom: 10px;
+      color: #ffffff; /* 白色字體 */
     }
     .total {
       margin-top: 20px;
       font-weight: bold;
+      color: #ffffff; /* 白色字體 */
     }
   </style>
 </head>
